// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level 1`] = `
<nav
  className="level"
>
  <div
    className="level-left"
  >
    <div
      className="level-item has-text-centered"
    >
      Foo
    </div>
  </div>
  <div
    className="level-right"
  >
    <div
      className="level-item"
    >
      Bar
    </div>
    <div
      className="level-item"
    >
      Baz
    </div>
  </div>
</nav>
`;

exports[`Level 2`] = `
<nav
  className="level"
>
  <div
    className="level-item"
  >
    Foo
  </div>
  <div
    className="level-item"
  >
    Bar
  </div>
</nav>
`;
